crates/rstest-bdd/tests/ui_macros/datatable_duplicate.stderr
error: invalid step function signature: only one DataTable parameter is permitted

         = help: Use a step attribute (such as `#[given]`) on `fn name(...args...)` with supported step arguments/fixtures (step attributes include `#[given]`, `#[when]`, and `#[then]`); remove `self` if present.

 --> tests/ui_macros/datatable_duplicate.rs:6:60
  |
6 | fn step(#[datatable] first: Vec<Vec<String>>, #[datatable] second: Vec<Vec<String>>) {}
  |                                                            ^^^^^^
